--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,2 +1,16 @@
 <h1 th:text="${question.subject}"></h1>
 <div th:text="${question.content}"></div>
+
+<!-- 답변 list -->
+<h5 th:text="|${#lists.size(question.answerList)}개의 답변이 있습니다.|"></h5>
+<div>
+    <ul>
+        <li th:each="answer : ${question.answerList}" th:text="${answer.content}"></li>
+    </ul>
+</div>
+
+<!-- 답변 등록 폼 -->
+<form th:action="@{|/answer/create/${question.id}|}" method="post">
+    <textarea name="content" id="content" rows="15" placeholder="답변을 입력하세요."></textarea>
+    <input type="submit" value="답변 등록">
+</form>
